# babbling_experiments

./: CMakeLists.txt  README.md  package.xml
action/: pose_goal.action
include/: globals.h  utilities.hpp
include/data/: data_controller_feedback.hpp  data_dataset.hpp  data_gmm.hpp  data_motion_rgbd.hpp  data_target_info.hpp  sync_data.hpp
launch/: babbling.launch  babbling.launch~  choice_heat_map.launch  class_eval_single_it.launch  classifier_eval.launch  data_synchronizer.launch  db_manager.launch  display_map_pcd.launch  display_workspace.launch  motion_detection_test.launch  motion_detector.launch  replay_babbling.launch  robot_controller.launch  robot_controller.launch~  saliency_map_viz.launch  supervisor_wave_1.launch  supervisor_wave_1_baxter.launch  supervisor_wave_2.launch  tilt_cloud.launch
launch/experiment/: exp_colorH.yml  exp_colorHSV.yml  exp_colorHSVNormal.yml  exp_colorHist.yml  exp_colorL.yml  exp_colorLab.yml  exp_colorLabHist.yml  exp_colorNormalHist.yml  exp_colorRGB.yml  exp_colorRGBNormal.yml  exp_colorS.yml  exp_colorV.yml  exp_colora.yml  exp_colorb.yml  exp_fpfh.yml  exp_merged.yml  exp_normal.yml  exp_normalHist.yml  exp_normalX.yml  exp_normalY.yml  exp_normalZ.yml
launch/experiment/sim/objects/: box1.sdf~
launch/params/: cafer.yml  experiment_settings.yml  global_params.yml  modalities.yml  modalities.yml~  planner_params.yml  supervisor_wave_1.yml  supervisor_wave_1_baxter.yml  supervisor_wave_2.yml  wave_1_metadata.yml  wave_2_metadata.yml  workbench_workspace.yml
msg/: dataset.msg  endeffector_pose.msg  gmm_archive.msg  joints_values.msg  reward.msg  rgbd_motion_data.msg  sv_feature.msg  sync_dataset.msg  target_info.msg
python/: choice_heat_map.py  class_analyse_tools.py  class_eval_graph.py  class_pos_neg_rep.py  class_result.py  eval_1.py  eval_3.py  eval_4.py  eval_archive_folder.py  graph_nbr_comp.py  graph_pos_neg.py  graph_pra.py  kmeans.py  randomForest.py  remove_nan_inf.py  svm.py
rviz/: babbling_exp.rviz
src/: babbling_node.cpp  classifier_eval.cpp  controller_node_fake.cpp  data_sync_node.cpp  db_manager_node.cpp  fake_babbling_node.cpp  motion_detector_node.cpp  supervisor_node.cpp
src/baxter/: baxter_moveit_utils.cpp
src/crustcrawler/: crustcrawler_moveit_utils.cpp  crustcrawler_moveit_utils_orientations.cpp
src/pr2/: pr2_moveit_utils.cpp
srv/: is_moving.srv
tools/: center_color_vccs.cpp  choice_heat_map.cpp  display_workspace.cpp  motion_detection_test.cpp  performance_variability.cpp  replay_babbling.cpp  saliency_map_viz.cpp
tools/score_comp/: score_computation.cpp  score_computation.hpp
